Fix order list spacing

--- a/src/assets/styles/cmps/SlidesCarousel.scss
+++ b/src/assets/styles/cmps/SlidesCarousel.scss
@@ -1,7 +1,7 @@
 .slideshow-container {
     position: relative;
     overflow: hidden;
-    height: 220px;
+    // height: 220px;
 
     .slides {
         display: flex;
