--- a/src/assets/styles/pages/Dashboard.scss
+++ b/src/assets/styles/pages/Dashboard.scss
@@ -173,16 +173,18 @@
 
             .dashboard-order {
                 border: 1px solid $borderclr1;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
+                display: grid;
+                grid-template-columns: 1fr auto auto auto auto;
                 padding: 1rem 1.5rem;
                 margin-bottom: 1rem;
                 min-height: 6rem;
+                gap: 6rem;
 
 
                 span {
                     position: relative;
+                    display: flex;
+                    align-items: center;
 
                     &:nth-child(1) {
                         display: flex;
@@ -211,6 +213,8 @@
                     &:nth-child(2),
                     &:nth-child(3),
                     &:nth-child(4) {
+                        flex-direction: column;
+                        justify-content: center;
 
                         p {
                             font-size: 0.875rem;
